--- a/BillHub/src/billhub/billHubDatabase.form
+++ b/BillHub/src/billhub/billHubDatabase.form
@@ -163,6 +163,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Add A New Customer"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addNewCustomerActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="returnToMenu">
           <Properties>
